--- a/CustomHierarchy/CustomHierarchy.csproj
+++ b/CustomHierarchy/CustomHierarchy.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{667EB7B5-6177-499F-A972-C883D392C9BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mistaken.CustomHierarchii</RootNamespace>
-    <AssemblyName>Mistaken.CustomHierarchii</AssemblyName>
+    <RootNamespace>Mistaken.CustomHierarchy</RootNamespace>
+    <AssemblyName>Mistaken.CustomHierarchy</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -23,7 +23,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
-    <DocumentationFile>bin\Debug\Mistaken.CustomHierarchii.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Mistaken.CustomHierarchy.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -53,10 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HierarchyHandler.CompareResult.cs" />
     <Compile Include="HierarchyHandler.cs" />
     <Compile Include="PluginHandler.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Translation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
